# Ormi

./: .gitignore  conftest.py  pyproject.toml
.github/workflows/: publish.yml
ormi/: pyproject.toml
ormi-core/: CMakeLists.txt  README.md  pyproject.toml
ormi-core/csrc/backend/: graph_breakers.cpp  graph_breakers.h  runtime.cpp  runtime.h
ormi-core/csrc/backend/cpu/: allocator.cpp  compiler.cpp  compiler.h  jit.cpp  jit.h  lowering_registry.h
ormi-core/csrc/backend/cpu/kernels/blas/: cpu_matmul.h  matmul.cpp
ormi-core/csrc/backend/cpu/kernels/reduce/: cpu_sum.h  sum.cpp
ormi-core/csrc/backend/cpu/lowerings/: pointwise.cpp
ormi-core/csrc/backend/cuda/: allocator.cu  compiler.cu  compiler.cuh  jit.cu  jit.cuh  lowering_registry.h  utils.cu  utils.cuh
ormi-core/csrc/backend/cuda/kernels/blas/: cuda_matmul.cuh  matmul.cu
ormi-core/csrc/backend/cuda/kernels/reduce/: cuda_sum.cuh  sum.cu
ormi-core/csrc/backend/cuda/lowerings/: pointwise.cpp
ormi-core/csrc/bindings/: bind_blas.cpp  bind_device.cpp  bind_graph.cpp  bind_memory.cpp  bind_operation.cpp  bind_pointwise.cpp  bind_reduce.cpp  bind_view.cpp  main.cpp
ormi-core/csrc/core/: adjoint.cpp  adjoint.h  allocator.cpp  allocator.h  attributes.h  autograd.cpp  autograd.h  device.h  dtype.h  memory.cpp  memory.h  node.cpp  node.h  ops.h  registry.h  shape.cpp  shape.h
ormi-core/csrc/core/ops/blas/: matmul.cpp  matmul.h
ormi-core/csrc/core/ops/pointwise/: add.cpp  add.h  cos.cpp  cos.h  div.cpp  div.h  exp.cpp  exp.h  log.cpp  log.h  mul.cpp  mul.h  neg.cpp  neg.h  pow.cpp  pow.h  sin.cpp  sin.h  sub.cpp  sub.h
ormi-core/csrc/core/ops/reduce/: sum.cpp  sum.h
ormi-core/csrc/core/ops/view/: expand.cpp  expand.h  reshape.cpp  reshape.h  transpose.cpp  transpose.h
ormi-core/csrc/tests/: CMakeLists.txt  test_utils.h
ormi-core/csrc/tests/backend/: test_graph_breakers.cpp  test_runtime.cpp
ormi-core/csrc/tests/backend/cpu/: test_compiler.cpp  test_jit.cpp
ormi-core/csrc/tests/backend/cpu/kernels/blas/: test_matmul.cpp
ormi-core/csrc/tests/backend/cpu/kernels/reduce/: test_sum.cpp
ormi-core/csrc/tests/backend/cuda/: test_compiler.cpp  test_jit.cpp
ormi-core/csrc/tests/backend/cuda/kernels/blas/: test_matmul.cpp
ormi-core/csrc/tests/backend/cuda/kernels/reduce/: test_sum.cpp
ormi-core/csrc/tests/core/: test_allocator.cpp  test_autograd.cpp  test_memory.cpp  test_node.cpp  test_ops.cpp  test_shape.cpp
ormi-core/csrc/tests/core/ops/blas/: test_matmul.cpp
ormi-core/csrc/tests/core/ops/pointwise/: test_add.cpp  test_cos.cpp  test_div.cpp  test_exp.cpp  test_log.cpp  test_mul.cpp  test_neg.cpp  test_pow.cpp  test_sin.cpp  test_sub.cpp
ormi-core/csrc/tests/core/ops/reduce/: test_reduce.cpp
ormi-core/csrc/tests/core/ops/view/: test_expand.cpp  test_reshape.cpp  test_transpose.cpp
ormi-core/csrc/utils/: macros.h
ormi-core/example/: test_autograd.py  test_graph.py  test_matmul.py
ormi-core/src/ormi_core/: __init__.py  exceptions.py  tensor.py
ormi-core/src/ormi_core/_ext/: __init__.py  ormi_backend.pyi
ormi-core/tests/: conftest.py  test_tensor.py
