[project]
name = "ormi-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ormi",
    "ormi-core[cuda13]",
]

[tool.uv.workspace]
members = ["ormi", "ormi-core"]

[tool.uv.sources]
ormi-core = { workspace = true }
ormi = { workspace = true }

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
]
