[project]
name = "ormi-core"
version = "0.1.0a1"
description = "A C++ lazily accelerated tensor/autograd engine."
readme = "README.md"
authors = [{ name = "Ha H. Le" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11>=2.11.0", "cmake>=3.20"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/ormi_core"]
cmake.build-type = "Release"

build-dir = "build"
editable.mode = "inplace"

[project.optional-dependencies]
cuda12 = ["cupy-cuda12x"]
cuda13 = ["cupy-cuda13x"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = [
    "dnf install -y dnf-plugins-core epel-release",
    "dnf config-manager --set-enabled crb",
    "dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo",
    "dnf clean all",
    "dnf -y install cuda-toolkit-12-4 openblas-devel"
]
environment = { PATH="/usr/local/cuda/bin:$PATH", CUDACXX="/usr/local/cuda/bin/nvcc" }