[project]
name = "ormi-core"
version = "0.1.0a1"
description = "A C++ lazily accelerated tensor/autograd engine."
readme = "README.md"
authors = [{ name = "Ha H. Le" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11>=2.11.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/ormi_core"]
cmake.build-type = "Release"
cmake.generator = "Ninja"

build-dir = "build"
editable.mode = "inplace"

[project.optional-dependencies]
cuda12 = ["cupy-cuda12x"]
cuda13 = ["cupy-cuda13x"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = [
    "dnf install -y dnf-plugins-core epel-release",
    "dnf config-manager --set-enabled powertools",
    "dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo",
    "dnf clean all",
    "dnf -y install cuda-toolkit-12-4 openblas-devel"
]
environment = { PATH="/usr/local/cuda-12.4/bin:$PATH", CUDACXX="/usr/local/cuda-12.4/bin/nvcc" }

[tool.cibuildwheel.windows]
before-all = "vcpkg install openblas:x64-windows"
environment = { CUDACXX="C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v12.4/bin/nvcc.exe", SKBUILD_CMAKE_ARGS="-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake" }