[project]
name = "ormi"
version = "0.1.0"
description = "A high-performance neural network frontend."
requires-python = ">=3.10"
dependencies = [
    "ormi-core", 
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]